--- a/templates/faculty_file.html
+++ b/templates/faculty_file.html
@@ -168,7 +168,7 @@
                   </div>
                 </div>
               {% endif %}
-              {% if not is_guest and not is_director %}
+              {% if not is_guest and not is_manager %}
               <div class="feedback-box">
                 <h5 style="margin-bottom: 5px;">Contribution feedbacks:</h5>
                 {% if contribution.comments.count == 0 %}
