--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -62,7 +62,7 @@ https://templatemo.com/tm-569-edu-meeting
               </li>
               {% endif %}
               {% if user.is_authenticated %}
-              {% if not is_manager and not is_coordinator %}
+              {% if not is_manager %}
               <li class="has-sub">
                 <a href="javascript:void(0)">Contributions</a>
                 <ul class="sub-menu">
