--- a/templates/contributions_detail.html
+++ b/templates/contributions_detail.html
@@ -142,7 +142,7 @@
                   </div>
                   {% endfor %}
                   {% if can_update %}
-                    {% if not is_cordinator and not is_director %}
+                    {% if not is_coordinator and not is_manager %}
                     <a href="{% url 'update_contribution' pk=contribution.id %}" type="submit" class="btn btn-primary" >
                       Update contribution
                     </a>  
@@ -175,7 +175,7 @@
                     {% endif %}
                   </div>
                 </div>
-                {% if not is_director %}
+                {% if not is_manager %}
                 <div class="feedback-box">
                   <form action="" method="POST">
                     {% csrf_token %}
