--- a/templates/list_academic_years.html
+++ b/templates/list_academic_years.html
@@ -95,23 +95,17 @@
                                     <tr>
                                       <td>{{ year.closure|date:"Y-m-d" }}</td>
                                       <td>{{ year.finalClosure|date:"Y-m-d" }}</td>
-                                      <td>{{ year.code }}</td>
 
                                       <td>
                                         <a
                                           href="{% url 'update_academic_year' year.id %}"
                                           class="btn btn-info btn-sm"
-                                          >Update</a>
-                                        <form
-                                          action="{% url 'remove_academic_year' year.id %}"
-                                          method="post"
-                                          style="display: inline"
-                                        >
-                                          {% csrf_token %}
-                                          <button type="submit" class="btn btn-danger btn-sm">
-                                            Remove
-                                          </button>
-                                        </form>
+                                          >Update
+                                        </a>
+                                        <form action="{% url 'remove_academic_year' year.id %}" method="post">
+                                            {% csrf_token %}
+                                            <button type="submit" class="btn btn-danger btn-sm">Remove</button>
+                                        </form>                                        
                                       </td>
                                     </tr>
                                     {% endfor %}
