--- a/templates/login.html
+++ b/templates/login.html
@@ -120,7 +120,7 @@
     <div class="video-overlay header-text">
       <div class="form-box">
         <div class="form-value">
-          <form class="form" method="POST" action="">
+          <form class="form" method="POST" action="{% url "login" %}">
               {% csrf_token %}
               <h2>Login</h2>
               <div class="inputbox">
