--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -21,6 +21,10 @@
   <link rel="stylesheet" href="{% static 'css/templatemo-edu-meeting.css' %}">
   <link rel="stylesheet" href="{% static 'css/owl.css' %}">
   <link rel="stylesheet" href="{% static 'css/lightbox.css' %}">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+
   <!--
 
 TemplateMo 569 Edu Meeting
