--- a/templates/login.html
+++ b/templates/login.html
@@ -111,6 +111,14 @@
     }
   </style>
 
+  {% if messages %}
+  {% for message in messages %}
+    {% if 'login_error' in message.tags %}
+      <div class="alert alert-info" role="alert">{{ message }}</div>
+    {% endif %}
+  {% endfor %}
+  {% endif %}
+
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
     <video autoplay muted loop id="bg-video">
